feature: 一堆新命令和AI画作 (让AI改了半天，我还是不会用svg)
变更:
- 几个新的命令（挺有用的）
- 把一些命令提示改成英文（好看）
- 修复watch的签名逻辑（TestInterpreter还在发力）

还有别的变动，自己探索探索吧（methods感觉要变成全能分析工具了）