@@ -5,7 +5,7 @@ import static com.justnothing.testmodule.constants.CommandServer.CMD_INVOKE_VER;
 import android.util.Log;
 
 import com.justnothing.testmodule.command.CommandExecutor;
-import com.justnothing.testmodule.utils.functions.Logger;
+import com.justnothing.testmodule.command.functions.CommandBase;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
@@ -15,18 +15,14 @@ import java.util.List;
 
 import de.robv.android.xposed.XposedHelpers;
 
-public class InvokeMethodMain {
+public class InvokeMethodMain extends CommandBase {
 
-    public static class InvokeLogger extends Logger {
-        @Override
-        public String getTag() {
-            return "InvokeExecutor";
-        }
+    public InvokeMethodMain() {
+        super("InvokeExecutor");
     }
-    public static final InvokeLogger logger = new InvokeLogger();
 
-
-    public static String getHelpText() {
+    @Override
+    public String getHelpText() {
         return String.format("""
                 命令语法: invoke <class> <method> [params...]
                     提供参数的格式: Type:value (e.g. Integer:114514)
@@ -43,12 +39,13 @@ public class InvokeMethodMain {
 
 
 
-    public static String runMain(CommandExecutor.CmdExecContext context) {
+    @Override
+    public String runMain(CommandExecutor.CmdExecContext context) {
         String[] args = context.args();
         ClassLoader classLoader = context.classLoader();
         String targetPackage = context.targetPackage();
         if (args.length < 2) {
-            logger.warn("提供的参数不足");
+            getLogger().warn("提供的参数不足");
             return getHelpText();
         }
 
@@ -60,7 +57,7 @@ public class InvokeMethodMain {
             try {
                 targetClass = XposedHelpers.findClass(className, classLoader);
             } catch (Throwable e) {
-                logger.warn("没有找到类" + className);
+                getLogger().warn("没有找到类" + className);
                 return "找不到类: " + className +
                         "\n类加载器: " + (targetPackage != null ? targetPackage : "default") +
                         "\n错误信息: " + e.getMessage() +
@@ -74,7 +71,7 @@ public class InvokeMethodMain {
                 String paramStr = args[i];
                 int colonIndex = paramStr.indexOf(':');
                 if (colonIndex <= 0) {
-                    logger.warn("参数形式不正确，获取到的: " + paramStr);
+                    getLogger().warn("参数形式不正确，获取到的: " + paramStr);
                     return "参数形式不正确: " + paramStr +
                             "; 应为Type:value" +
                             "\n\n示例: " +
@@ -88,11 +85,11 @@ public class InvokeMethodMain {
                     Object parsedValue = TypeParser.parse(typeName, valueExpr, classLoader);
                     params.add(parsedValue);
                     paramTypes.add(parsedValue.getClass());
-                    logger.info("参数" + (params.size() - 1) +
+                    getLogger().info("参数" + (params.size() - 1) +
                             ": (" + paramTypes.get(paramTypes.size()-1).getName() +")" +
                             params.get(paramTypes.size()-1).toString());
                 } catch (Exception e) {
-                    logger.warn("无法解析参数" + paramStr);
+                    getLogger().warn("无法解析参数" + paramStr);
                     return "解析参数 " + (i-1) + "失败: " + e.getMessage() +
                             "\n参数: " + paramStr +
                             "\n堆栈追踪: " + Log.getStackTraceString(e);
@@ -107,7 +104,7 @@ public class InvokeMethodMain {
                         paramTypes.toArray(new Class<?>[0]), false);
 
                 if (method == null) {
-                    logger.warn("没有找到类" + className + "的方法" + methodName);
+                    getLogger().warn("没有找到类" + className + "的方法" + methodName);
                     StringBuilder sb = new StringBuilder();
                     sb.append("没有找到方法: ").append(methodName).append("(");
                     for (int i = 0; i < paramTypes.size(); i++) {
@@ -121,8 +118,8 @@ public class InvokeMethodMain {
                     for (Method m : targetClass.getDeclaredMethods()) {
                         if (m.getName().contains(methodName)) {
                             sb.append("  ");
-                            logger.warn("但是找到了类似的方法" + methodDescriptor(method));
-                            sb.append(methodDescriptor(method));
+                            getLogger().warn("但是找到了类似的方法" + methodDescriptor(m));
+                            sb.append(methodDescriptor(m));
                             sb.append("\n");
                             found = true;
                         }
@@ -142,9 +139,9 @@ public class InvokeMethodMain {
                 result = findSingletonInstance(targetClass);
                 if (result == null) {
                     try {
-                        result = targetClass.newInstance();
+                        result = targetClass.getDeclaredConstructor().newInstance();
                     } catch (Exception e) {
-                        logger.warn("尝试调用非静态方法" + className + "." + methodName + "时创建实例失败", e);
+                        getLogger().warn("尝试调用非静态方法" + className + "." + methodName + "时创建实例失败", e);
                         return "非静态方法需要一个示例，在创建实例的时候出现错误: " + e.getMessage() +
                                 "\n堆栈追踪: " + Log.getStackTraceString(e);
                     }
@@ -153,10 +150,10 @@ public class InvokeMethodMain {
             }
 
             if (result == null) {
-                logger.info("调用成功，返回: null");
+                getLogger().info("调用成功，返回: null");
                 return "结果: null";
             } else {
-                logger.info("调用成功，返回：(" + result.getClass().getName() + result.toString());
+                getLogger().info("调用成功，返回：(" + result.getClass().getName() + result.toString());
                 return "结果: " + result.toString() +
                         "\n类型: " + result.getClass().getName() +
                         "\nHash: " + System.identityHashCode(result);
@@ -164,7 +161,7 @@ public class InvokeMethodMain {
 
         } catch (Throwable e) {
             StringBuilder sb = new StringBuilder();
-            logger.info("调用失败", e);
+            getLogger().info("调用失败", e);
             sb.append("调用失败: ").append(e.getMessage()).append("\n");
             Throwable cause = e.getCause();
             if (cause != null && cause != e) {
@@ -177,7 +174,7 @@ public class InvokeMethodMain {
     }
 
 
-    private static Method findMethod(Class<?> clazz, String methodName, Class<?>[] paramTypes, boolean staticOnly) {
+    private Method findMethod(Class<?> clazz, String methodName, Class<?>[] paramTypes, boolean staticOnly) {
         try {
             Method method = clazz.getDeclaredMethod(methodName, paramTypes);
             if (!staticOnly || Modifier.isStatic(method.getModifiers())) {
@@ -214,7 +211,7 @@ public class InvokeMethodMain {
     }
 
 
-    private static Object findSingletonInstance(Class<?> clazz) {
+    private Object findSingletonInstance(Class<?> clazz) {
         // 尝试常见的单例字段名
         String[] singletonFieldNames = {
                 "INSTANCE", "instance", "mInstance", "sInstance",
@@ -239,7 +236,7 @@ public class InvokeMethodMain {
     }
 
 
-    private static String methodDescriptor(Method m) {
+    private String methodDescriptor(Method m) {
         int modifiers = m.getModifiers();
         StringBuilder desc = new StringBuilder();
         if (Modifier.isStatic(modifiers)) {
